Bug 478810 - document role='textbox' fails assertion, r=surkov, r=MarcoZ